edits to vancouver link

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <a href="#">Local Stores</a>
           <ul class="sub-menu">
             <div class="dropdown">
-         <li><a href="#">Vancouver</a></li>
+         <li><a href="https://oryxetmar.github.io/code-error260/">Vancouver</a></li>
          <li><a href="#">Surrey</a></li>
             </div>
        </ul>
